# shortcut

./: .env  Cargo.toml  README.md  compose.yaml  docker-compose.yaml
.github/workflows/: ci.yaml  ghcr.yaml
.sqlx/: query-0fc1485249251c9d7dde3a811acf24fd5e40c3408ef6ea573aed426b291346ce.json  query-2531973bb3e677284238fb4f51a09fca427b0ffb977b19e40bab0a07a4d406f1.json  query-2b2c46e04e63f709fd6a8c0d9b1b65bcc27ae3e8d0fa015cca85d24ae892be4a.json  query-6f978f9cfb453dbffeadf104ea365813342b1d814efa5707aaacf557dafeb52c.json  query-9acb88ab18ab5d32966c058ddac7c3bfd2bb5266c587945a7cd8d5ce0e3140dc.json
db/init/: setup.sql
docs/: 00-prepare-environment.md  architecture.md  db-design.md
migrations/: 20230827182324_init.sql
proto/: shortcut.proto
scctl/: Cargo.toml
scctl/src/: cli.rs  client.rs  main.rs
shortcut-api/: Cargo.toml  Dockerfile  build.rs  entrypoint.sh
shortcut-api/migrations/: 20230827182324_init.sql
shortcut-api/src/: cli.rs  lib.rs  main.rs
shortcut-api/src/middlewares/db/: postgres.rs
shortcut-api/src/repositories/: links.rs  mod.rs
shortcut-api/src/services/: mod.rs  shortcut.rs
shortcut-api/tests/: repository.rs  shortcut_api.rs
shortcut-gateway/: Cargo.toml
shortcut-gateway/src/: cli.rs  handler.rs  lib.rs  main.rs  server.rs
tools/: run-test.sh
