[package]
name = "scctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
prettytable-rs = "0.10.0"
shortcut-api = { version = "0.1.0", path = "../shortcut-api" }
tokio = { version = "1.35.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["prost"] }
