[package]
name = "shortcut-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
prost = "0.12.3"
prost-types = "0.12.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["prost"] }

[build-dependencies]
tonic-build = "0.10.2"
