[package]
name = "shortcut-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client", "client-legacy"] }
shortcut-api = { version = "0.1.0", path = "../shortcut-api" }
tokio = { version = "1.35.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["prost"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
